Fix CORS for Vercel deployment